2016-10-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac (TEXINFO_DTD_VERSION): Bump version to 6.3dev.
	Although the DTD hasn't changed, the meaning has due to change
	in 'type' attribute of 'float' element on 2016-10-16.
	* util/texinfo.dtd: Add 2016 copyright year.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm,
	* tp/Texinfo/Transformations.pm
	(fill_gaps_in_sectioning, insert_nodes_for_sectioning_commands)
	(add_node_menu_if_missing, complete_node_menu)
	(complete_tree_nodes_menus, new_master_menu, regenerate_master_menu)
	(menu_to_simple_menu, set_menus_to_simple_menu): Move some 
	less-used functions out into a new file, Transformations.pm.

	* tp/Texinfo/Structuring.pm,
	(_new_block_command, new_block_command): Rename.
	(_new_node_menu_entry, new_node_menu_entry): Rename.
	(add_missing_menus): Remove, as it isn't used anywhere.

	* Pod-Simple-Texinfo/pod2texi.pl: Call functions in their new 
	locations.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Structuring.pm (nodes_tree): Use a hash reference
	that is inside a variable for brevity.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm: Rename 'ids' hash to 'seen_ids'
	and use 1 as its values instead of references to tree elements.

2016-10-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/HTML.pm
	(_new_sectioning_command_target): Do not set 'id' on target 
	record: only set 'target'.  Do not set 'contents_id' or
	'shortcontents_id'.
	(_prepare_special_elements): Don't call 
	Texinfo::Config::special_element_target_file_name with $id
	argument, and don't set 'id' on target record.
	(_prepare_index_entries): Don't set 'id' on target record 
	separately from 'target'.
	(_prepare_contents_element): Don't set 'id' on target records.
	Don't call Texinfo::Config::special_element_target_file_name
	with 'id' argument.
	(_get_target): Comment updated.
